feat: Eliminar archivos y servicios obsoletos
Se eliminaron los archivos y servicios obsoletos que ya no se utilizan en el proyecto.
